@@ -1,4 +1,4 @@
-/* Copyright (C) 2009 Free Software Foundation, Inc.
+/* Copyright (C) 2009, 2011 Free Software Foundation, Inc.
    Contributed by Richard Henderson <rth@redhat.com>.
 
    This file is part of the GNU Transactional Memory Library (libitm).
@@ -35,6 +35,9 @@ typedef struct gtm_jmpbuf
 /* Alpha generally uses a fixed page size of 8K.  */
 #define PAGE_SIZE	8192
 #define FIXED_PAGE_SIZE	1
+
+/* The size of one line in hardware caches (in bytes). */
+#define HW_CACHELINE_SIZE 64
 
 static inline void
 cpu_relax (void)
